# simcom-GE_SRTP

./: Makefile  Makefile.am  Makefile_Windows  configure.ac  debug.sh  start_simcom_demo
inc/: ALSAControl.h  ATControl.h  BTControl.h  DEVControl.h  DMSControl.h  DataCall.h  DnsResolv.h  EthControl.h  FTPControl.h  GPSControl.h  GpioControl.h  I2C.h  LedControl.h  LinuxTimer.h  NASControl.h  OTAUpgrade.h  SMSControl.h  SQLiteDatabase.h  TTSControl.h  UIMControl.h  VehicleData.h  VoiceCall.h  WDSControl.h  WiFiControl.h  app_common.h  app_timer.h  ftp_s.h  http_s.h  json-c.h  mqtt_s.h  openssl.h  simcom_demo_version.h  simcom_test_main.h
libs/: libcurl.so.5  libgmp.so.10  libgnutls.so.28  libhogweed.so.2  libmosquitto.so.1  libnettle.so.4  libz.so.1
sdk-includes/common/: simcom_comdef.h  simcom_common.h
sdk-includes/data/: qcmap_client_const.h  qcmap_client_def.h
sdk-includes/gps/: garden_utils.h  location_interface.h  xtra_system_interface.h
sdk-includes/mcm/: mcm_sms_v01.h
uinc/: GE_SRTP.h  IOT_APP.h  common.h  log.h  queue_array.h  simcom_lbs.h  type.h  usr_cfg.h
usrc/: GE_SRTP.c  GE_SRTP_Analyze.c  GE_SRTP_CELL.c  GE_SRTP_Command.c  GPSControl.c  IOT_ADC.c  IOT_APP.c  IOT_Data.c  IOT_DomainNameToIP.c  IOT_GPS.c  IOT_IPSet.c  IOT_LED.c  IOT_LEDControl.c  IOT_NTP.c  IOT_PBoxInfo.c  IOT_SIM7600CE.c  IOT_SecsBinaryCreate.c  IOT_Timer.c  IOT_Uart.c  IOT_http_s.c  IOT_mqtt_pub.c  log.c  log.c.bak  main.c
usrc/notuse/: BTControl.c  EthControl.c  FTPControl.c  GPSControl.c  GpioControl.c  I2C.c  LedControl.c  LinuxTimer.c  LinuxTimer.c~  OTAUpgrade.c  TCPDemo.c  app_timer.c  demoVersion.c  ftp_s.c  json-c.c  main_bak.c  mqtt_s.c  openssl.c  simcom_common.c  simcom_lbs_test.c  simcom_test_main.c  spidev_test.c  uart_debug.c  uartapp.c
